# Mifare-Desfire-Password-Manager-App

./: .cmake-js  .gitignore  .gitmodules  CMakeLists.txt  README.md  dist-log.txt  electron-builder.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  types.d.ts  vite.config.ts
.github/workflows/: build.yml  ci.yml  release.yml
.prompt/: ARCHITECTURE.md  NFC_FEATURE_PLAN.md  PASSWORD_STORAGE_OPTION_A_ON_CARD.md  PASSWORD_STORAGE_OPTION_B_CARD_AS_KEY.md  project-context.md
deploy/pi-sync/: .env.example  README.md  docker-compose.yml
docs/: CARD_RECOVERY.md  MATURITY_ASSESSMENT.md  SECURITY_ARCHITECTURE.md  SYNC_AUTH_SECURITY.md  release-checklist-1.0.md  sync-mvp.md  ui-overhaul.md  ui-roadmap.md
extension/: background.js  content.js  manifest.json  popup.html  popup.js
native/: RegisterModules.cc
native-host/: com.securepass.bridge.firefox.json  com.securepass.bridge.json  host.js  package.json  register-windows.ps1  run-host.bat
native/MyLibrary/bindings/: MyObject.cc  MyObject.h
native/MyLibrary/inc/: MyLibrary.h
native/MyLibrary/src/: MyLibrary.cpp
native/adapters/hardware/: Pn532Adapter.cc  Pn532Adapter.h  SerialBusPlatform.cc  SerialBusPlatform.h
native/bindings/node/: MyLibraryBinding.cc  MyLibraryBinding.h  NfcCppBinding.cc  NfcCppBinding.h
native/core/ports/: INfcReader.h
native/core/services/: NfcService.cc  NfcService.h
packaging/linux/debian/: postinst
packaging/linux/udev/: 99-nfc-serial.rules  install-udev.sh
scripts/: afterPack.js  download-cp210x.js
src/electron/: bindings.ts  bridgeServer.ts  cardHandlers.ts  keyDerivation.ts  main.ts  nativeHostRegistrar.ts  nfcCancel.ts  pathResolver.ts  pinManager.ts  preload.cts  syncHandlers.ts  syncService.ts  tsconfig.json  updateManager.ts  utils.ts  vault.ts  vaultHandlers.ts  vaultKeyManager.ts
src/types/: myaddon.d.ts
src/ui/: App.tsx  index.css
src/ui/Components/: DebugTerminal.tsx  GettingStartedCoach.tsx  LockScreen.tsx  LockTransition.tsx  MainPage.tsx  OnboardingScreen.tsx  SetupBrandShield.tsx  Sidebar.tsx  SplashScreen.tsx  SyncSetupFlow.tsx  TapCardOverlay.tsx
src/ui/Components/Nfc/: CardVersionCard.tsx  ConnectionCard.tsx  DebugVersionCard.tsx  FirmwareVersionCard.tsx  SelfTestCard.tsx  selfTestTypes.ts
src/ui/Components/UI/: Button.tsx
src/ui/hooks/: useLiveSync.ts
src/ui/pages/: AboutPage.tsx  CardPage.tsx  GeneratorPage.tsx  InvitesPage.tsx  NfcReaderPage.tsx  PasswordsPage.tsx  SettingsPage.tsx
sync-server/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
sync-server/deploy/: .env.example  README.md  docker-compose.yml
sync-server/docs/: invite-system.md  ngrok-deployment.md
sync-server/src/: auth.ts  authMiddleware.ts  config.ts  db.ts  index.ts  mfa.ts
sync-server/src/routes/: auth.ts  invite.ts  keys.ts  sync.ts
sync-server/src/types/: express.d.ts
tests/: addon.test.ts  updateManager.test.ts
